[package]
name = "okx-backtest"
version = "0.1.0"
edition = "2024"
description = "Convert OKX L2 + trade archives into hftbacktest-ready NPZ feeds"
authors = ["trade-lab"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
humantime = "2.1"
ndarray = "0.15"
ndarray-npy = { version = "0.8", features = ["npz", "compressed_npz"] }
py_literal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
