[package]
name = "okx-orderbook-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ordered-float = "4"
flate2 = "1"
tar = "0.4"
tempfile = "3"
zip = "0.6"
